@@ -43,6 +43,11 @@ are provided for all suitable HOL types, records and datatypes.
 * Constants Set.Pow and Set.image now with authentic syntax; object-logic definitions
 Set.Pow_def and Set.image_def.  INCOMPATIBILITY.
 
+* Renamed theorems:
+Suc_eq_add_numeral_1 -> Suc_eq_plus1
+Suc_eq_add_numeral_1_left -> Suc_eq_plus1_left
+Suc_plus1 -> Suc_eq_plus1
+
 * Discontinued ancient tradition to suffix certain ML module names with "_package", e.g.:
 
     DatatypePackage ~> Datatype
